# zok-website

./: .gitignore  Cargo.toml  Cross.toml  README.md  admin.html  bun.lockb  contact.html  databaseFetch.ts  index.html  index.js  index.ts  lid-worden.html  menu-phone.js  mongoDB.ts  onze-kines.html  package-lock.json  package.json  sendMail.ts  server.js  server.ts  styles-index.css  styles-onze-kines.css  styles-zok.css  styles.css  template.html  todo.md  tsconfig.json  zok.html
.github/workflows/: npm-publish-github-packages.yml
activiteiten/: Blessurepreventie.json
public/: admin.css  footer.css  header.css  styles-index.css  styles-kalender-template.css  styles-zok.css  styles.css
public/scripts/: admin.js  admin_login.js  carousel.js  check-riziv.js  get_items.js  header-footer.js  header.js  quill.js
routes/: admin.ts  berichten.ts  kalender.js  kalender.ts
scripts/: colorCurrentPage.js  header-footer.js  kalender-nav.js
src/: lib.rs  main.rs
templates/: 404.html  add_bericht.html.hbs  add_event.html.hbs  admin.html.hbs  admin_login.html  bericht.html.hbs  contact.html  disclaimer.html  edit_bericht.html.hbs  edit_event.html.hbs  event.html.hbs  index.html  index.html.hbs  leden.html.hbs  lid_worden.html  wie_zijn_wij.html
templates/old/: 404.ejs  (+4 more)
views/: 404.ejs  addBerichten.ejs  addKalender.ejs  admin.ejs  berichtItem.ejs  contact.ejs  disclaimer.ejs  editKalender.ejs  footer.ejs  header.ejs  index.ejs  inschrijvings.ejs  kalender-template.ejs  kalender.ejs  kalenderItem.ejs  leden.ejs  lid-worden.ejs  onze-kines.ejs  wieZijnWij.ejs  zok.ejs
(+6 files in other folders)
